# LanceLink

./: docker-compose.yaml
backend/: .env-exemple  Dockerfile  pyproject.toml
backend/app/: __main__.py
backend/app/core/: settings.py
backend/app/database/: __init__.py  database.py
frontend/: package-lock.json  package.json
